After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708084 - podcast: Local file name is not escaped
podcast: Local file name is not escaped
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: Podcast
2.99.x
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-14 19:50 UTC by Roman Yepishev
Modified: 2014-03-08 08:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Actually use the esc_local_file_name (436 bytes, patch)
2013-09-14 19:50 UTC, Roman Yepishev
none Details | Review

Description Roman Yepishev 2013-09-14 19:50:39 UTC
Created attachment 254946 [details] [review]
Actually use the esc_local_file_name

STR:

1. Subscribe to http://blog.stackoverflow.com/category/podcasts/feed/
2. Attempt to download some episodes

Expected results:
Files are downloaded

Actual result:
Only two files are downloaded because the ID3 tags contain "#" which is interpreted as a fragment. All the subsequent files try to get downloaded to filenames called "SE " and "SE Podcast ".

The code has the proper escaping call but the resulting escaped filename is not used. The patch is attached.
Comment 1 Jonathan Matthew 2014-03-08 08:53:38 UTC
pushed as commit 4e39c11, thanks.