podcast: actually use the escaped file name

https://bugzilla.gnome.org/show_bug.cgi?id=708084